--- a/ts3server-pro/Dockerfile
+++ b/ts3server-pro/Dockerfile
@@ -3,7 +3,7 @@ FROM arm64v8/debian:bookworm-slim
 # Systemdependencies
 RUN apt-get update && apt-get install -y \
     wget curl git cmake build-essential \
-    libsdl2-dev libx11-dev python3 python3-pip \
+    libsdl2-dev libx11-dev python3 python3-pip python3-venv \
     sqlite3 libsqlite3-dev && apt-get clean
 
 # Box64 kompilieren
@@ -14,14 +14,16 @@ RUN git clone https://github.com/ptitSeb/box64.git && \
 
 # TS3 Server installieren
 WORKDIR /app
-RUN wget -O ts3server.tar.bz2 https://files.teamspeak-services.com/releases/server/3.13.7/teamspeak3-server_linux_amd64-3.13.7.tar.bz2 && \
-    tar xvf ts3server.tar.bz2 --strip-components=1 && \
-    rm ts3server.tar.bz2 && \
+RUN wget -O ts3.tar.bz2 $(curl -s 'https://www.teamspeak.com/versions/server.json' | jq -r '.linux.x86.mirrors[0]') && \
+    tar xvf ts3.tar.bz2 --strip-components=1 && \
+    rm ts3.tar.bz2 && \
     touch .ts3server_license_accepted
 
-# Webinterface
+# Webinterface mit virtuellem Environment
+RUN python3 -m venv /opt/venv
+ENV PATH="/opt/venv/bin:$PATH"
 COPY www /www
-RUN pip3 install flask waitress
+RUN pip install --no-warn-script-location flask waitress
 
 # Startscript
 COPY entrypoint.sh /
