--- a/ts3server-box86/config.json
+++ b/ts3server-box86/config.json
@@ -17,7 +17,7 @@
   "arch": ["aarch64"],
   "map": ["config"],
   "options": {
-    "serveradmin_password": "your_password"
+    "serveradmin_password": "{{ env_var('TS3_ADMIN_PASSWORD') }}"
   },
   "schema": {
     "serveradmin_password": "str"
