--- a/ts3server-box86/config.json
+++ b/ts3server-box86/config.json
@@ -1,25 +1,32 @@
 {
   "name": "TS3 Server (Box64)",
-  "version": "1.0.0",
+  "version": "1.2.0",
   "slug": "ts3server-box64",
-  "description": "TeamSpeak 3 Server mit Box64-Emulation und Admin-Interface",
+  "description": "TeamSpeak 3 Server mit ARM64-Unterstützung",
+  "arch": ["aarch64"],
   "startup": "system",
   "boot": "auto",
   "ingress": true,
-  "panel_icon": "mdi:account-voice",
+  "panel_icon": "mdi:voice-chat",
   "icon": "icon.svg",
   "ports": {
     "9987/udp": 9987,
     "10011/tcp": 10011,
-    "30033/tcp": 30033,
-    "5000/tcp": 5000
+    "30033/tcp": 30033
   },
-  "arch": ["aarch64"],
-  "map": ["config"],
+  "ports_description": {
+    "9987/udp": "Voice Server",
+    "10011/tcp": "ServerQuery",
+    "30033/tcp": "File Transfer"
+  },
+  "map": ["config:rw"],
+  "environment": {
+    "TS3SERVER_LICENSE": "accept"
+  },
   "options": {
-    "serveradmin_password": "{{ env_var('TS3_ADMIN_PASSWORD') }}"
+    "query_password": "changeme"
   },
   "schema": {
-    "serveradmin_password": "str"
+    "query_password": "str"
   }
 }
